// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component tests Behaviour Press does not work when button is disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={false}
    onPress={[MockFunction]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={true}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#F1F2F6",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>,
        "disabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#5F6D7D",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={true}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#F1F2F6",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>,
          "disabled": true,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Behaviour Press works 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={true}
    onPress={[MockFunction]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#1C497E",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>,
        "disabled": false,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#C0C0C0",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#1C497E",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>,
          "disabled": false,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={true}
    onPress={[Function]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#1C497E",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>,
        "disabled": false,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#C0C0C0",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#1C497E",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>,
          "disabled": false,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={false}
    onPress={[Function]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#F1F2F6",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>,
        "disabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#5F6D7D",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={true}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#F1F2F6",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>,
          "disabled": true,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled with children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={false}
    onPress={[Function]}
    title=""
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Custom text inside button
    </Text>
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#F1F2F6",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>,
        "disabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Custom text inside button",
          "ellipsizeMode": "tail",
        },
        "ref": null,
        "rendered": "Custom text inside button",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={true}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#F1F2F6",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>,
          "disabled": true,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Custom text inside button",
            "ellipsizeMode": "tail",
          },
          "ref": null,
          "rendered": "Custom text inside button",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled with title 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={false}
    onPress={[Function]}
    title="Testing title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          Testing title
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#F1F2F6",
        },
        undefined,
      ],
      "title": "Testing title",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          Testing title
        </Text>,
        "disabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Testing title",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#5F6D7D",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Testing title",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={true}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            Testing title
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#F1F2F6",
          },
          undefined,
        ],
        "title": "Testing title",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#5F6D7D",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            Testing title
          </Text>,
          "disabled": true,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Testing title",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#5F6D7D",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Testing title",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={true}
    onPress={[Function]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#1C497E",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          
        </Text>,
        "disabled": false,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#C0C0C0",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#1C497E",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            
          </Text>,
          "disabled": false,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled with children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={true}
    onPress={[Function]}
    title=""
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Custom text inside button
    </Text>
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#1C497E",
        },
        undefined,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>,
        "disabled": false,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Custom text inside button",
          "ellipsizeMode": "tail",
        },
        "ref": null,
        "rendered": "Custom text inside button",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#1C497E",
          },
          undefined,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>,
          "disabled": false,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Custom text inside button",
            "ellipsizeMode": "tail",
          },
          "ref": null,
          "rendered": "Custom text inside button",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled with title 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    enabled={true}
    onPress={[Function]}
    title="Testing title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ]
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          Testing title
        </Text>
      </TouchableOpacity>,
      "style": Array [
        Object {
          "borderRadius": 15,
          "height": 30,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#1C497E",
        },
        undefined,
      ],
      "title": "Testing title",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            }
          }
        >
          Testing title
        </Text>,
        "disabled": false,
        "onPress": [Function],
        "style": Array [
          Object {
            "marginLeft": 13,
            "marginRight": 13,
          },
        ],
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Testing title",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#C0C0C0",
            "fontSize": 14,
            "letterSpacing": -0.02,
            "lineHeight": 19,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Testing title",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Object {
                "marginLeft": 13,
                "marginRight": 13,
              },
            ]
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            Testing title
          </Text>
        </TouchableOpacity>,
        "style": Array [
          Object {
            "borderRadius": 15,
            "height": 30,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#1C497E",
          },
          undefined,
        ],
        "title": "Testing title",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#C0C0C0",
                "fontSize": 14,
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              }
            }
          >
            Testing title
          </Text>,
          "disabled": false,
          "onPress": [Function],
          "style": Array [
            Object {
              "marginLeft": 13,
              "marginRight": 13,
            },
          ],
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Testing title",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#C0C0C0",
              "fontSize": 14,
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Testing title",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
